--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node -e js"
+    "start": "nodemon index.js --exec babel-node -e js",
+    "debug": "DEBUG=express:* nodemon index.js --exec babel-node -e js"
   },
   "author": "",
   "license": "ISC",
